# siren_core

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
src/: siren.cpp  siren.h
src/client_wrapper/: abstract_http_client.cpp  abstract_http_client.h  abstract_request.h  client_wrapper.cpp  client_wrapper.h  http_client.cpp  http_client.h  http_client_factory.cpp  http_client_factory.h
src/client_wrapper/grpc/: grpc_client.cpp  grpc_client.h  grpc_request.cpp  grpc_request.h
src/client_wrapper/rest/: rest_client.cpp  rest_client.h  rest_request.cpp  rest_request.h
src/common/: common.cpp  common.h
src/common/hash/: xxh64.h
src/decoder/: pcm.cpp  pcm.h
src/entities/: fingerprint.h  freq_bin.cpp  freq_bin.h  kdtree.h  spectrogram.cpp  spectrogram.h
src/fft/: fft.cpp  fft.h
src/proto/: CMakeLists.txt  fingerprint.proto
src/serializer/: serializer.h  traits.h
test/: assert.cpp  common.cpp  common.h  core.cpp  decoder.cpp  entities.cpp  fft.cpp  kdtree.cpp  wrapper.cpp
